<resources>
    <string name="app_name">BabyApp</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis porttitor bibendum magna, a dignissim turpis lacinia non. Mauris sit amet vulputate lacus. Maecenas ac semper neque. Nulla et vehicula ipsum, nec dignissim nibh. Praesent accumsan ipsum id nibh maximus, nec gravida nunc laoreet. Nam pulvinar, quam tincidunt fermentum porta, arcu nisl molestie quam, vel iaculis elit nulla sit amet nibh. Etiam posuere risus non neque consequat laoreet. Mauris vestibulum, risus ut eleifend sodales, justo mauris vestibulum est, ac vulputate nisi ligula nec massa. Ut tincidunt dui enim, in rutrum enim tristique id. Etiam egestas nec est non porta. Nulla lobortis convallis fringilla. Curabitur non vestibulum ligula. Morbi </string>


    //home page
    <string name="detail_perkembangan_bayi">Detail Perkembangan Bayi Pada Minggu      </string>
    <string name="detail_checklist">List yang Perlu di Kerjakan Pada Minggu </string>
    <string name="detail_Activities">Detail Perkembangan Bayi Pada Minggu </string>
    <string name="detail_perlengkapan_dan_mainan">Perlengkapan dan Mainan untuk Bayi Pada Minggu</string>
    <string name="detail_resep_mpasi">Resep Pendamping ASI Sehat dan Antialergi</string>
    <string name="resep_mpasi">Resep MPASI</string>
    <string name="foto_bayi_hari_ini">Foto Bayi Anda Hari ini</string>

    //panduan page
    <string name="perkembangan_bayi">Perkembangan Bayi</string>
    <string name="checklist">Checklist</string>
    <string name="Activities">Activities</string>
    <string name="perlengkapan_dan_mainan">Perlengkapan dan Mainan</string>
    <string name="resep_makanan">Resep Makanan</string>
    <string name="tips_perkembangan">Tips</string>

    //tools page
    <string name="foto_bayi_setiap_hari">Foto Bayi Setiap Hari</string>
    <string name="memories">Memories</string>
    <string name="e_cards">E-Cards</string>
    <string name="lullabies">Lullabies</string>
    <string name="white_noise">White Noise</string>
</resources>
