<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Home Here"-->
    <!--android:textSize="48dp"-->
    <!--android:layout_centerInParent="true"/>-->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_line"
                android:background="@drawable/background_rectangle"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/babyAgeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/perkembangan_bayi" />

                <ImageView
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_growth" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/homePerkembanganBayi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_line"
                android:background="@drawable/background_rectangle_riple"
                android:orientation="vertical"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/perkembangan_bayi"
                    android:textColor="@color/blue_title"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/detailPerkembanganBayi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_perkembangan_bayi" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/homeChecklist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_line"
                android:background="@drawable/background_rectangle_riple"
                android:orientation="vertical"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/checklist"
                    android:textColor="@color/blue_title"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/detailChecklist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_checklist" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/homeActivities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_line"
                android:background="@drawable/background_rectangle_riple"
                android:orientation="vertical"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/Activities"
                    android:textColor="@color/blue_title"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/detailActivities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_Activities" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/homePerlengkapanMainan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_line"
                android:background="@drawable/background_rectangle_riple"
                android:orientation="vertical"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/perlengkapan_dan_mainan"
                    android:textColor="@color/blue_title"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/detailPerlengkapan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_perlengkapan_dan_mainan" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/homeResepMpasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_line"
                android:background="@drawable/background_rectangle_riple"
                android:orientation="vertical"
                android:padding="10dp"
                android:clickable="true"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/resep_mpasi"
                    android:textColor="@color/blue_title"
                    android:textStyle="bold"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/detailResepMpasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_resep_mpasi" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_between_line"
                android:background="@drawable/background_rectangle"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/fotoBayiWidth"
                    android:layout_height="@dimen/fotoBayiHeight"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_growth" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foto_bayi_hari_ini"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>